cmake_minimum_required(VERSION 3.7)

project( Lua544 )

set (LUA_RUNTIME_SOURCES
"src/lapi.c"
"src/lcorolib.c"
"src/ldo.h"
"src/liolib.c"
"src/lmem.h"
"src/loslib.c"
"src/lstring.h"
"src/lundump.h"
"src/lapi.h"
"src/lctype.c"
"src/ldump.c"
"src/ljumptab.h"
"src/loadlib.c"
"src/lparser.c"
"src/lstrlib.c"
"src/lutf8lib.c"
"src/lauxlib.c"
"src/lctype.h"
"src/lfunc.c"
"src/llex.c"
"src/lobject.c"
"src/lparser.h"
"src/ltable.c"
"src/luaconf.h"
"src/lvm.c"
"src/lauxlib.h"
"src/ldblib.c"
"src/lfunc.h"
"src/llex.h"
"src/lobject.h"
"src/lprefix.h"
"src/ltable.h"
"src/lvm.h"
"src/lbaselib.c"
"src/ldebug.c"
"src/lgc.c"
"src/llimits.h"
"src/lopcodes.c"
"src/lstate.c"
"src/ltablib.c"
"src/lzio.c"
"src/lcode.c"
"src/ldebug.h"
"src/lgc.h"
"src/lmathlib.c"
"src/lopcodes.h"
"src/lstate.h"
"src/ltm.c"
"src/lualib.h"
"src/lzio.h"
"src/lcode.h"
"src/ldo.c"
"src/linit.c"
"src/lmem.c"
"src/lopnames.h"
"src/lstring.c"
"src/ltm.h"
"src/lundump.c"
# Commented These Out Cause They Are Standalone Programs
#"src/lua.c"
#"src/luac.c"
#"src/lua.h"
#"src/lua.hpp"
)

add_library( Lua544 ${LUA_RUNTIME_SOURCES} )
target_include_directories ( Lua544 PUBLIC "${PROJECT_SOURCE_DIR}/src")
